Finished Integration Test example