@@ -47,7 +47,7 @@ public class WeatherDataArquillianIT { // The class must be declared as public
                 .addAsLibraries(pomFile.resolve("org.hamcrest:hamcrest:2.2").withTransitivity().asFile())
                 .addAsLibraries(pomFile.resolve("org.assertj:assertj-core:3.25.3").withTransitivity().asFile())
                 .addAsLibraries(pomFile.resolve("net.datafaker:datafaker:2.2.2").withTransitivity().asFile())
-                .addAsLibraries(pomFile.resolve("com.h2database:h2:2.2.224").withTransitivity().asFile())
+//                .addAsLibraries(pomFile.resolve("com.h2database:h2:2.2.224").withTransitivity().asFile())
 //                .addAsLibraries(pomFile.resolve("com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11").withTransitivity().asFile())
                 .addAsLibraries(pomFile.resolve("com.oracle.database.jdbc:ojdbc11:23.4.0.24.05").withTransitivity().asFile())
 //                .addAsLibraries(pomFile.resolve("org.postgresql.jdbc:postgresql:42.7.3").withTransitivity().asFile())
@@ -89,11 +89,16 @@ public class WeatherDataArquillianIT { // The class must be declared as public
 
     @Order(1)
     @ParameterizedTest
-    // TODO Changed the expected results
     @CsvSource(value = {
-            "15"
+            "15,South Forest,Sleet,42,Erdmanbury,Snow,30"
     })
-    void findAll_Size_BoundaryValues(int expectedSize) {
+    void findAll_Size_BoundaryValues(int expectedSize,
+                                     String expectedFirstCity,
+                                     String expectedFirstDescription,
+                                     int expectedFirstCelsius,
+                                     String expectedLastCity,
+                                     String expectedLastDescription,
+                                     int expectedLastCelsius) {
         assertThat(_weatherDataRepository).isNotNull();
         // Arrange and Act
         List<WeatherData> weatherDataList = _weatherDataRepository.findAll();
@@ -102,58 +107,56 @@ public class WeatherDataArquillianIT { // The class must be declared as public
                 .isEqualTo(expectedSize);
 
         // Get the first entity and compare with expected results
-//        var firstWeatherData = weatherDataList.get(0);
-        // TODO Assert that each property match expected results for the first record
-        //assertThat(firstWeatherData.getProperty1()).isEqualTo(expectedFirstRecordProperty1);
-        //assertThat(firstWeatherData.getProperty2()).isEqualTo(expectedFirstRecordProperty2);
+        var firstWeatherData = weatherDataList.getFirst();
+        assertThat(firstWeatherData.getCity()).isEqualTo(expectedFirstCity);
+        assertThat(firstWeatherData.getDescription()).isEqualTo(expectedFirstDescription);
+        assertThat(firstWeatherData.getTemperatureCelsius()).isEqualTo(expectedFirstCelsius);
 
         // Get the last entity and compare with expected results
-//        var lastWeatherData = weatherDataList.get(weatherDataList.size() - 1);
-        // TODO Assert that each property match expected results for the last record
-        //assertThat(lastWeatherData.getProperty1()).isEqualTo(expectedLastRecordProperty1);
-        //assertThat(lastWeatherData.getProperty2()).isEqualTo(expectedLastRecordProperty2);
-
+        var lastWeatherData = weatherDataList.getLast();
+        assertThat(lastWeatherData.getCity()).isEqualTo(expectedLastCity);
+        assertThat(lastWeatherData.getDescription()).isEqualTo(expectedLastDescription);
+        assertThat(lastWeatherData.getTemperatureCelsius()).isEqualTo(expectedLastCelsius);
     }
 
 
-    @Order(2)
-    @ParameterizedTest
-    // TODO Change the value below
-    @CsvSource(value = {
-            "primaryKey,expectedProperty1Value,expectedProperty2Value",
-            "primaryKey,expectedProperty1Value,expectedProperty2Value"
-    })
-    void findById_ExistingId_IsPresent(Long weatherDataId, String expectedProperty1, String expectedProperty2) {
-        // Arrange and Act
-        Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(weatherDataId);
-        assertThat(optionalWeatherData.isPresent())
-                .isTrue();
-        WeatherData existingWeatherData = optionalWeatherData.orElseThrow();
-
-        // Assert
-        assertThat(existingWeatherData)
-                .isNotNull();
-        // TODO Assert that each property matches the expected result
-        // assertThat(existingWeatherData.getProperty1())
-        //     .isEqualTo(expectedProperty1);
-
-    }
+//    @Order(2)
+//    @ParameterizedTest
+//    // TODO Change the value below
+//    @CsvSource(value = {
+//            "primaryKey,expectedProperty1Value,expectedProperty2Value",
+//            "primaryKey,expectedProperty1Value,expectedProperty2Value"
+//    })
+//    void findById_ExistingId_IsPresent(Long weatherDataId, String expectedProperty1, String expectedProperty2) {
+//        // Arrange and Act
+//        Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(weatherDataId);
+//        assertThat(optionalWeatherData.isPresent())
+//                .isTrue();
+//        WeatherData existingWeatherData = optionalWeatherData.orElseThrow();
+//
+//        // Assert
+//        assertThat(existingWeatherData)
+//                .isNotNull();
+//        // TODO Assert that each property matches the expected result
+//        // assertThat(existingWeatherData.getProperty1())
+//        //     .isEqualTo(expectedProperty1);
+//
+//    }
 
 
     @Order(3)
     @ParameterizedTest
-    // TODO Change the value below
     @CsvSource(value = {
-            "Property1Value, Property2Value, Property3Value",
-            "Property1Value, Property2Value, Property3Value",
+            "Edmonton, Oilers, 20",
+            "Florida, Pathers, 35",
     })
-    void add_ValidData_Added(String property1, String property2, String property3) throws SystemException, NotSupportedException {
+    void add_ValidData_Added(String city, String description, int celsius) throws SystemException, NotSupportedException {
         // Arrange
         WeatherData newWeatherData = new WeatherData();
         // TODO Set each property of the new entity
-        //newWeatherData.setProperty1(property1);
-        //newWeatherData.setProperty2(property2);
-        //newWeatherData.setProperty3(property3);
+        newWeatherData.setCity(city);
+        newWeatherData.setDescription(description);
+        newWeatherData.setTemperatureCelsius(celsius);
 
         _beanManagedTransaction.begin();
 
@@ -162,10 +165,9 @@ public class WeatherDataArquillianIT { // The class must be declared as public
             _weatherDataRepository.add(newWeatherData);
 
             // Assert
-            // TODO Uncomment code below and change get method for primary key
-            // Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(newWeatherData.getPrimaryKeyProperty());
-            // assertThat(optionalWeatherData.isPresent())
-            //     .isTrue();
+             Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(newWeatherData.getId());
+             assertThat(optionalWeatherData.isPresent())
+                 .isTrue();
 
         } catch (Exception ex) {
             fail("Failed to add entity with exception %s", ex.getMessage());
@@ -176,118 +178,118 @@ public class WeatherDataArquillianIT { // The class must be declared as public
     }
 
 
-    @Order(4)
-    @ParameterizedTest
-    // TODO Change the value below
-    @CsvSource(value = {
-            "PrimaryKey, Property1Value, Property2Value, Property3Value",
-            "PrimaryKey, Property1Value, Property2Value, Property3Value",
-    })
-    void update_ExistingId_UpdatedData(Long weatherDataId, String property1, String property2, String property3) throws SystemException, NotSupportedException {
-        // Arrange
-        Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(weatherDataId);
-        assertThat(optionalWeatherData.isPresent()).isTrue();
-
-        WeatherData existingWeatherData = optionalWeatherData.orElseThrow();
-        assertThat(existingWeatherData).isNotNull();
-
-        // Act
-        // TODO Uncomment code below and assign new value to each property
-        // existingWeatherData.setProperty1(property1);
-        // existingWeatherData.setProperty2(property2);
-
-        _beanManagedTransaction.begin();
-
-        try {
-            WeatherData updatedWeatherData = _weatherDataRepository.update(weatherDataId, existingWeatherData);
-
-            // Assert
-            assertThat(existingWeatherData)
-                    .usingRecursiveComparison()
-                    // .ignoringFields("field1", "field2")
-                    .isEqualTo(updatedWeatherData);
-        } catch (Exception ex) {
-            fail("Failed to update entity with exception %s", ex.getMessage());
-        } finally {
-            _beanManagedTransaction.rollback();
-        }
-
-    }
-
-
-    @Order(5)
-    @ParameterizedTest
-    // TODO Change the value below
-    @CsvSource(value = {
-            "primaryKey1",
-            "primaryKey2",
-    })
-    void deleteById_ExistingId_DeletedData(Long weatherDataId) throws SystemException, NotSupportedException {
-        _beanManagedTransaction.begin();
-
-        try {
-            // Arrange and Act
-            _weatherDataRepository.deleteById(weatherDataId);
-
-            // Assert
-            assertThat(_weatherDataRepository.findById(weatherDataId))
-                    .isEmpty();
-
-        } catch (Exception ex) {
-            fail("Failed to delete entity with exception message %s", ex.getMessage());
-        } finally {
-            _beanManagedTransaction.rollback();
-        }
-
-    }
-
-
-    @Order(6)
-    @ParameterizedTest
-    // TODO Change the value below
-    @CsvSource(value = {
-            "primaryKey",
-            "primaryKey"
-    })
-    void findById_NonExistingId_IsEmpty(Long weatherDataId) {
-        // Arrange and Act
-        Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(weatherDataId);
-
-        // Assert
-        assertThat(optionalWeatherData.isEmpty())
-                .isTrue();
-
-    }
-
-
-    @Order(7)
-    @ParameterizedTest
-    // TODO Change the value below
-    @CsvSource(value = {
-            "Invalid Property1Value, Property2Value, Property3Value, ExpectedExceptionMessage",
-            "Property1Value, Invalid Property2Value, Property3Value, ExpectedExceptionMessage",
-    }, nullValues = {"null"})
-    void create_beanValidation_throwsException(String property1, String property2, String property3, String expectedExceptionMessage) throws SystemException, NotSupportedException {
-        // Arrange
-        WeatherData newWeatherData = new WeatherData();
-        // TODO Change the code below to set each property
-        // newWeatherData.setProperty1(property1);
-        // newWeatherData.setProperty2(property2);
-        // newWeatherData.setProperty3(property3);
-
-        _beanManagedTransaction.begin();
-        try {
-            // Act
-            _weatherDataRepository.add(newWeatherData);
-            fail("An bean validation constraint should have been thrown");
-        } catch (Exception ex) {
-            // Assert
-            assertThat(ex)
-                    .hasMessageContaining(expectedExceptionMessage);
-        } finally {
-            _beanManagedTransaction.rollback();
-        }
-
-    }
+//    @Order(4)
+//    @ParameterizedTest
+//    // TODO Change the value below
+//    @CsvSource(value = {
+//            "PrimaryKey, Property1Value, Property2Value, Property3Value",
+//            "PrimaryKey, Property1Value, Property2Value, Property3Value",
+//    })
+//    void update_ExistingId_UpdatedData(Long weatherDataId, String property1, String property2, String property3) throws SystemException, NotSupportedException {
+//        // Arrange
+//        Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(weatherDataId);
+//        assertThat(optionalWeatherData.isPresent()).isTrue();
+//
+//        WeatherData existingWeatherData = optionalWeatherData.orElseThrow();
+//        assertThat(existingWeatherData).isNotNull();
+//
+//        // Act
+//        // TODO Uncomment code below and assign new value to each property
+//        // existingWeatherData.setProperty1(property1);
+//        // existingWeatherData.setProperty2(property2);
+//
+//        _beanManagedTransaction.begin();
+//
+//        try {
+//            WeatherData updatedWeatherData = _weatherDataRepository.update(weatherDataId, existingWeatherData);
+//
+//            // Assert
+//            assertThat(existingWeatherData)
+//                    .usingRecursiveComparison()
+//                    // .ignoringFields("field1", "field2")
+//                    .isEqualTo(updatedWeatherData);
+//        } catch (Exception ex) {
+//            fail("Failed to update entity with exception %s", ex.getMessage());
+//        } finally {
+//            _beanManagedTransaction.rollback();
+//        }
+//
+//    }
+//
+//
+//    @Order(5)
+//    @ParameterizedTest
+//    // TODO Change the value below
+//    @CsvSource(value = {
+//            "primaryKey1",
+//            "primaryKey2",
+//    })
+//    void deleteById_ExistingId_DeletedData(Long weatherDataId) throws SystemException, NotSupportedException {
+//        _beanManagedTransaction.begin();
+//
+//        try {
+//            // Arrange and Act
+//            _weatherDataRepository.deleteById(weatherDataId);
+//
+//            // Assert
+//            assertThat(_weatherDataRepository.findById(weatherDataId))
+//                    .isEmpty();
+//
+//        } catch (Exception ex) {
+//            fail("Failed to delete entity with exception message %s", ex.getMessage());
+//        } finally {
+//            _beanManagedTransaction.rollback();
+//        }
+//
+//    }
+//
+//
+//    @Order(6)
+//    @ParameterizedTest
+//    // TODO Change the value below
+//    @CsvSource(value = {
+//            "primaryKey",
+//            "primaryKey"
+//    })
+//    void findById_NonExistingId_IsEmpty(Long weatherDataId) {
+//        // Arrange and Act
+//        Optional<WeatherData> optionalWeatherData = _weatherDataRepository.findById(weatherDataId);
+//
+//        // Assert
+//        assertThat(optionalWeatherData.isEmpty())
+//                .isTrue();
+//
+//    }
+//
+//
+//    @Order(7)
+//    @ParameterizedTest
+//    // TODO Change the value below
+//    @CsvSource(value = {
+//            "Invalid Property1Value, Property2Value, Property3Value, ExpectedExceptionMessage",
+//            "Property1Value, Invalid Property2Value, Property3Value, ExpectedExceptionMessage",
+//    }, nullValues = {"null"})
+//    void create_beanValidation_throwsException(String property1, String property2, String property3, String expectedExceptionMessage) throws SystemException, NotSupportedException {
+//        // Arrange
+//        WeatherData newWeatherData = new WeatherData();
+//        // TODO Change the code below to set each property
+//        // newWeatherData.setProperty1(property1);
+//        // newWeatherData.setProperty2(property2);
+//        // newWeatherData.setProperty3(property3);
+//
+//        _beanManagedTransaction.begin();
+//        try {
+//            // Act
+//            _weatherDataRepository.add(newWeatherData);
+//            fail("An bean validation constraint should have been thrown");
+//        } catch (Exception ex) {
+//            // Assert
+//            assertThat(ex)
+//                    .hasMessageContaining(expectedExceptionMessage);
+//        } finally {
+//            _beanManagedTransaction.rollback();
+//        }
+//
+//    }
 
 }
